--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,15 +13,15 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:latest .
+      - docker tag 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:latest 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - docker push 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:latest
+      - docker push 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"agentic-ai-poc","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"agentic-ai-poc","imageUri":"%s"}]' 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:$IMAGE_TAG > imagedefinitions.json
 artifacts:
     files: imagedefinitions.json
