--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,6 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 771992990997.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
@@ -22,6 +21,7 @@ phases:
       - docker push 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:latest
       - docker push 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"agentic-ai-poc","imageUri":"%s"}]' 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"ai-agent-app","imageUri":"%s"}]' 771992990997.dkr.ecr.us-east-1.amazonaws.com/agentic-ai-poc:$IMAGE_TAG > imagedefinitions.json
 artifacts:
-    files: imagedefinitions.json
+  files:
+    - imagedefinitions.json
