--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,13 +1,13 @@
 # Use slim Python 3.13 base image
-#FROM python:3.13-slim
-FROM python:3.10.4-slim-bullseye
+FROM python:3.13-slim
+#FROM python:3.10.4-slim-bullseye
 
 # Set working directory
 WORKDIR /app
 
 # Install system dependencies (curl useful for debugging)
-# Commented for Python 3.9.0 compatibility
-#RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+# Commented for compatibility
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 # Copy and install Python dependencies
 COPY ./app/requirements.txt /app/requirements.txt
